<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context='com.jonathanduque.ejemplomd.sitios'>
    <LinearLayout
        style="@style/LinearLayoutStyle"
        android:layout_weight="2.3">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="@style/textViewStyle"
            android:text="@string/title_activity_sitios"
            android:gravity="center"
            android:background="@color/black"/>

    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/LinearLStyle2"
            android:background="@drawable/lacascada">
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/lacascada"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle">
        <LinearLayout
            style="@style/LinearLStyle2"
            android:background="@drawable/lamayoria">
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/lamayoria"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle">
        <LinearLayout
            style="@style/LinearLStyle2"
            android:background="@drawable/altodelavirgen">
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/altodelavirgen"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle">
        <LinearLayout
            style="@style/LinearLStyle2"
            android:background="@drawable/estadio">
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/estadio_futbol"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        style="@style/LinearLayoutStyle">
        <LinearLayout
            style="@style/LinearLStyle2"
            android:background="@drawable/iglesia">
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/parqueprincipal"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>